--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- NAVBAR -->
   <nav>
     <div class="left">
-      <a href="/">Your Name</a>
+      <a href="/">Yatharthe</a>
     </div>
 
     <div class="right">
@@ -33,7 +33,7 @@
         <span>Linkedin</span>
       </a>
       
-      <a href="mailto:john@example.com">
+      <a href="koshtiyatharth7777@gmail.com">
         <i class="fa-solid fa-envelope"></i>
         <span>Email</span>
       </a>
